@@ -1,3 +1,9 @@
+2001-11-18  Seth Robertson  <seth@yeah.baka.org>
+
+	* lib/b_string.c (bk_encode_base64): Mime encode/decode routines
+
+	* src/mmcat.c (main): Mime encode/decode test program (useful too)
+
 2001-11-16  James Tanis  <jtt@winwood.sysdetect.com>
 
 	* src/bttcp.c (main): If using -r without -l make the local name
